codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_turn_overrides.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd and approval policy while keeping model constant.\",\n&[(\"First Request (Baseline)\", &requests[0]),\n(\"Second Request (Turn Overrides)\", &requests[1]),])"
---
Scenario: Second turn changes cwd and approval policy while keeping model constant.

## Window 1
-- request 1 (turn; First Request (Baseline)) --
00:message/developer[4]:
    [01] <SKILLS_INSTRUCTIONS>
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <USAGE_STATS_INSTRUCTIONS>
    [04] <PROJECT_AUTOMATION_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    first turn
-- request 2 (turn; Second Request (Turn Overrides)) --
03:message/assistant:
    turn one complete
04:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
05:message/user:
    <ENVIRONMENT_CONTEXT>
06:message/user:
    second turn with context updates
